# OpenFlipper

./: .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  Readme.md
CI/: ci-cppcheck.sh  ci-doc.sh  ci-linux-build.sh  ci-linux-config.sh  ci-linux-test.sh  ci-mac-M1-build.sh  ci-mac-M1-deploy.sh  ci-mac-M1-test.sh  ci-mac-build.sh  ci-mac-deploy.sh  ci-mac-test.sh  ci-source.sh  ci-windows-bootstrap-level1.bat  ci-windows-bootstrap.bat  ci-windows-build.bat  ci-windows-config.bat  ci-windows-deploy.bat  ci-windows-test.bat  ci-windows.bat
CI/artifacts/: ci-doc.sh  ci-linux-build.sh  ci-mac-build.sh  ci-mac-test.sh
CI/artifacts/gitlab-ci/: linux-template-job-full.yml  windows-template-deploy-job.yml  windows-template-test-job.yml
CI/gitlab-ci/: assemble-gitlab-ci.py  ci-master.yml  linux-iwyu-job.yml  linux-template-build-job.yml  linux-template-job-debug.yml  linux-template-job-release.yml  linux-template-job.yml  linux-template-test-job.yml  linux.yml  mac-M1-template-build-job.yml  mac-M1-template-deploy-job.yml  mac-M1-template-job.yml  mac-M1-template-test-job.yml  mac-template-build-job.yml  mac-template-deploy-job.yml  mac-template-job.yml  mac-template-test-job.yml  mac.yml  other.yml  windows-template-build-job.yml  windows-template-deploy-job.yml  windows-template-job.yml  windows-template-test-job.yml  windows.yml
Plugin-HoverPlugin/: CMakeLists.txt  HoverPlugin.cc  HoverPlugin.hh
Plugin-MillingSimulator/: CMakeLists.txt  MillingSimulatorPlugin.cc  MillingSimulatorPlugin.hh
Plugin-MillingSimulator/Machine/: Machine.cc  Machine.hh
Plugin-MillingSimulator/Resources/: BZT_PFX_1000_HD.json  BZT_PFX_1000_HD.xml  Howto-and-GCodes.txt  Schwenktisch_Basis.mtl  Werkzeugwechsler.mtl  dodekaeder_final.cnc  p2b.cnc  test.cnc
Plugin-MillingSimulator/Widgets/: MillingPluginToolbox.cc  MillingPluginToolbox.hh  MillingPluginToolbox.ui
Plugin-Plane/: CMakeLists.txt  PlanePlugin.cc  PlanePlugin.hh  PlanePluginScripting.cc  PlanePluginT_impl.hh
